[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/systems/cat.gd" id="1"]
[ext_resource type="Script" path="res://scripts/systems/cat_behavior_controller.gd" id="2"]
[ext_resource type="Script" path="res://scripts/systems/currency_generator.gd" id="3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 20.0

[node name="Cat" type="CharacterBody2D"]
script = ExtResource("1")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="Visuals"]

[node name="SelectionIndicator" type="ColorRect" parent="Visuals"]
visible = false
modulate = Color(1, 1, 0, 0.5)
offset_left = -16.0
offset_top = -32.0
offset_right = 16.0
offset_bottom = -28.0
color = Color(1, 1, 0, 1)

[node name="LevelLabel" type="Label" parent="Visuals"]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="BehaviorController" type="Node" parent="."]
script = ExtResource("2")

[node name="CurrencyGenerator" type="Node" parent="."]
script = ExtResource("3")

[node name="InteractionArea" type="Area2D" parent="."]
input_pickable = true
monitorable = true

[node name="InteractionCollision" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_1")